refactor : stream().collect(Collectors.toList())를 stream().toList()로 변경